--- a/default_configs/monitor_cirrus/index.html
+++ b/default_configs/monitor_cirrus/index.html
@@ -2058,9 +2058,9 @@
 <p><strong>Monitor Page Views</strong></p>
 <p>This is a metric intended to test the functionality of Cirrus within Monitor.
 It simply sums the page view events for Monitor.</p>
-<p>Analysis Periods:  <code>daily</code> ,   <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code> ,   <code>daily</code>  </p>
 <p>Data Source: <a href="#monitor_events_v1"><code>monitor_events_v1</code></a></p>
-<p>Statistics: <code>empirical_cdf</code>, <code>bootstrap_mean</code>, <code>deciles</code></p>
+<p>Statistics: <code>empirical_cdf</code>, <code>deciles</code>, <code>bootstrap_mean</code></p>
 <details>
 <summary>Definition:</summary>
 
